<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">




    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/enter_details"
        android:textColor="?android:textColorPrimary"
        android:textSize="26sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/nameTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:background="@drawable/style_edittext_rounded_border"
        android:gravity="left"
        android:hint="@string/name"
        android:imeOptions="actionNext"
        android:inputType="text"
        android:paddingHorizontal="20dp"
        android:paddingVertical="10dp"
        android:textColor="@color/mapboxBlack"
        android:textColorHint="#4F4F4F" />

    <EditText
        android:id="@+id/companyTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:background="@drawable/style_edittext_rounded_border"
        android:gravity="left"
        android:text="MAXDIGI"
        android:hint="@string/company"
        android:imeOptions="actionNext"
        android:inputType="text"
        android:paddingHorizontal="20dp"
        android:paddingVertical="10dp"
        android:textColor="@color/mapboxBlack"
        android:textColorHint="#4F4F4F"
        android:visibility="gone" />

    <EditText
        android:id="@+id/addressTxt"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginVertical="10dp"
        android:background="@drawable/style_edittext_rounded_border"
        android:gravity="left"
        android:hint="@string/address"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:paddingHorizontal="20dp"
        android:paddingVertical="15dp"
        android:textColor="@color/mapboxBlack"
        android:textColorHint="#4F4F4F" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/startKawaBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|center_vertical"
        android:layout_marginTop="20dp"
        android:background="@drawable/style_rounded_corner"
        android:backgroundTint="@color/mapboxBlue"
        android:foreground="@drawable/riipleeffectbuttons"
        android:padding="20dp"
        android:text="@string/start_kawa_map"
        android:textAllCaps="false"
        android:textColor="#fff" />


</LinearLayout>
